--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,9 @@ asgiref==3.5.2
 # decorator==5.1.1
 # defusedxml==0.7.1
 Django==4.1.2
+django_cron
 django-browser-reload==1.6.0
+djangorestframework
 # entrypoints==0.4
 # executing==0.9.1
 # fastjsonschema==2.16.1
