--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ Django==4.1.2
 django_cron
 django-browser-reload==1.6.0
 djangorestframework
+django-cors-headers
 # entrypoints==0.4
 # executing==0.9.1
 # fastjsonschema==2.16.1
